# bsvp-csv-export

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
client/: package-lock.json  package.json
client/src/: App.js  Exporter.js  Exporters.js  Header.js
modules/: constants.py  logger.py  runner.py
modules/exporter/: base_exporter.py  gambio.py  shop_jsonld.py
modules/exporter/shop/: __init__.py  gm_price_status.py
modules/exporter/shop/description/: __init__.py
modules/exporter/shop/jsonld/: __init__.py  additional_properties.py  core_fields.py  dimensions.py  mapping_loader.py  normalizer.py  product_fields.py  renderer.py
modules/exporter/utils/: unescape_bsvp.py
modules/formatter/: __init__.py
modules/parser/: gpsr.py  prod.py
modules/validator/: __init__.py
setup/example_configs/: Shop.json
setup/example_configs/GPSR/: Hersteller_KBS.yml  Hersteller_KBS_Eisbereiter.yml  Hersteller_Nordcap.yml  Lieferant_KBS.yml  Lieferant_Nordcap.yml
setup/example_configs/GPSR/Templates/: Download.txt  Hersteller.txt  Lieferant.txt
utils/: parse_bcm.py  update_jsonld_mapping.py
