[project]
name = "bsvp-csv-export"
version = "0.1.0"
description = "Python-basierter Exporter für die Umwandlung von BSVP zu CSV Dateien"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
]
